# routes/post.js
@@ -2,14 +2,14 @@ const express = require("express");
 const multer = require("../middleware/multer-config");
 const router = express.Router();
 const postCtrl = require("../controllers/post");
-const likePostCtrl = require("../controllers/likePost")
-//const auth = require("../middleware/auth");
+const likePostCtrl = require("../controllers/likePost");
+const auth = require("../middleware/auth");
 
-router.post("/",  multer, postCtrl.createPost); //auth multer
-router.post("/:id/like",likePostCtrl.likePost) //auth
-router.get("/",  postCtrl.getAllPost); //auth
-router.get("/:id",  postCtrl.getOnePost); //auth
-router.put("/:id",  multer, postCtrl.updatePost); //auth multer
-router.delete("/:id", postCtrl.deletePost); //auth
+router.post("/", auth, multer, postCtrl.createPost); 
+router.post("/:id/like", auth, likePostCtrl.likePost); 
+router.get("/", auth, postCtrl.getAllPost); 
+router.get("/:id", auth, postCtrl.getOnePost); 
+router.put("/:id", auth, multer, postCtrl.updatePost); 
+router.delete("/:id", auth, postCtrl.deletePost); 
 
 module.exports = router;
