# routes/profil.js
@@ -4,8 +4,8 @@ const auth = require("../middleware/auth");
 const profilCtrl = require("../controllers/profil");
 const multer = require("../middleware/multer-config");
 
-router.get("/:id",  profilCtrl.getProfil); //auth
-router.put("/:id",  multer, profilCtrl.updateProfil); //auth
-router.delete("/:id", profilCtrl.deleteProfil); //auth
+router.get("/:id",auth,  profilCtrl.getProfil); //auth
+router.put("/:id", auth, multer, profilCtrl.updateProfil); //auth
+router.delete("/:id", auth,profilCtrl.deleteProfil); //auth
 
 module.exports = router;
