# swagger.yaml
@@ -84,6 +84,14 @@ paths:
       summary: Returns a post by ID.
       tags:
         - Profil
+      components:
+        securitySchemes:
+          bearerAuth:
+            type: http
+            scheme: bearer
+            bearerFormat: JWT
+      security:
+        - bearerAuth: []
       parameters:
         - name: profil Id
           in: path
@@ -125,6 +133,8 @@ paths:
       operationId: updateProfil
       tags:
         - Profil
+      security:
+        - bearerAuth: []
       parameters:
         - name: profil Id
           in: path
@@ -167,6 +177,8 @@ paths:
       operationId: deleteProfil
       tags:
         - Profil
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
@@ -185,6 +197,8 @@ paths:
       operationId: findPosts
       tags:
         - Posts
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: allPost response
@@ -195,6 +209,8 @@ paths:
       operationId: addPost
       tags:
         - Posts
+      security:
+        - bearerAuth: [eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE2MjkxOTI4MTQsImV4cCI6MTYyOTI3OTIxNH0.4mehqGVOKcciCpmbN4FmVuSeb-gxZc6_sV7bzQ-hMKE]
       requestBody:
         required: true
         content:
@@ -224,6 +240,8 @@ paths:
       summary: Returns a post by ID.
       tags:
         - Posts
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
@@ -266,6 +284,8 @@ paths:
       operationId: updatePost
       tags:
         - Posts
+      security:
+        - bearerAuth: []
       parameters:
         - name: postId
           in: path
@@ -308,6 +328,8 @@ paths:
       operationId: deletePost
       tags:
         - Posts
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
@@ -327,6 +349,8 @@ paths:
       operationId: post a like
       tags: 
         - like
+      security:
+        - bearerAuth: []
       parameters:
         - name: postId
           in: path
@@ -358,6 +382,8 @@ paths:
       operationId: findAllComments
       tags:
         - Comments
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: allComment response
@@ -368,6 +394,8 @@ paths:
       operationId: addComment
       tags:
         - Comments
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -389,6 +417,8 @@ paths:
       summary: Returns a comment by ID.
       tags:
         - Comments
+      security:
+        - bearerAuth: []
       parameters:
         - name: commentId
           in: path
@@ -426,6 +456,8 @@ paths:
       operationId: updateComment
       tags:
         - Comments
+      security:
+        - bearerAuth: []
       parameters:
         - name: commentId
           in: path
@@ -460,6 +492,8 @@ paths:
       operationId: deletePost
       tags:
         - Comments
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
@@ -479,6 +513,8 @@ paths:
       operationId: post a like
       tags: 
         - like
+      security:
+        - bearerAuth: []
       parameters:
         - name: postId
           in: path
